2003-07-28  Bernhard Held <bernhard@bernhardheld.de>

	* src/z80/mappings.i: fix _mul[us][int,long] entries

2003-07-26  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

    *src/SDCCmain.c: do not search for crt0.o when using --nostdlib

2003-07-24  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCicode.c (operandOperation): really fixed problem with bitops
	* support/regression/tests/bitopcse.c: added
	fixed warning:
	* src/avr/gen.c:
	* src/pic/gen.c:
	* src/pic16/gen.c:
	* src/z80/gen.c:
	* src/xa51/gen.c:

2003-07-24  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

    added support for new library format to z80, gbz80 linkers:
    *link/z80/aslink.h
    *link/z80/lklex.c
    *link/z80/lklib.c
    *link/z80/lklist.c

2003-07-24  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCicode.c (operandOperation): fixed problem with bitops and 0xffffffff;
	after {double d = 0xffffffff; long l = d;} l will be 0x80000000 (LONG_MIN)

2003-07-23  Bernhard Held <bernhard@bernhardheld.de>

	added DUMMY_READ_VOLATILE:
	* src/SDCC.y:
	* src/avr/gen.c:
	* src/xa51/gen.c:
	* src/z80/gen.c:
	* src/pic/gen.c:
	* src/pic16/gen.c:
	* src/mcs51/gen.c:
	* src/ds390/gen.c:
	* src/SDCCcse.c (algebraicOpts): many improvements
	* src/SDCCcse.h: removed algebraicOpts()
	* src/SDCCicode.c (picDummyRead): added

2003-07-23  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* as/mcs51/lkmem.c: Changed message "Insufficient DRAM memory" to
	"Insufficient space in data memory".

2003-07-20  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/mcs51/gen.c: fixed bug #771358
	* src/z80/gen.c: fixed bug #759087

2003-07-20  Bernhard Held <bernhard@bernhardheld.de>

	* src/pic16/glue.c: minor cleanup by Vangelis

2003-07-19  Frieder Ferlemann <Frieder.Ferlemann@web.de>

        * device/include/regc515c.h: fixed #758477
        * device/lib/_gptrget.c: saving some cycles in generic pointer get
        * device/lib/_gptrput.c: saved a few bytes
	* my tab spacing is 8, yours too?)